--- a/src/main/resources/stages/mainMenu/login_stage.fxml
+++ b/src/main/resources/stages/mainMenu/login_stage.fxml
@@ -8,44 +8,55 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@../stylesheets/normalTheme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="packman.controllers.mainMenu.LoginController">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="0.0" minWidth="0.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="packman.controllers.mainMenu.LoginController">
    <children>
-      <Label alignment="CENTER" layoutX="553.0" layoutY="206.0" prefHeight="75.0" prefWidth="174.0" text="PackMan" textAlignment="CENTER">
+      <AnchorPane fx:id="loginPane" prefHeight="727.0" prefWidth="1287.0" />
+      <Label fx:id="stanleeQuote" alignment="CENTER" contentDisplay="CENTER" layoutY="90.0" prefHeight="485.0" prefWidth="576.0" text="&quot; Life is never completely  &#10;without its challenges. &quot;&#10;&#10;- Stan Lee -" textAlignment="CENTER" textFill="WHITE">
          <font>
-            <Font name="Arial Rounded MT Bold" size="36.0" />
+            <Font name="Arial Rounded MT Bold" size="34.0" />
          </font>
       </Label>
-      <TextField fx:id="usernameField" layoutX="530.0" layoutY="298.0" prefHeight="0.0" prefWidth="221.0" promptText="Username">
+      <Button fx:id="helpButton" layoutX="1170.0" layoutY="10.0" mnemonicParsing="false" onAction="#handleHelpButtonOnAction" prefHeight="50.0" prefWidth="100.0" text="HELP" textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="registerButton" layoutX="768.0" layoutY="495.0" mnemonicParsing="false" onAction="#handleRegisterButtonOnAction" prefHeight="53.0" prefWidth="320.0" text="REGISTER" textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="26.0" />
+         </font>
+      </Button>
+      <TextField fx:id="usernameField" layoutX="768.0" layoutY="239.0" prefHeight="50.0" prefWidth="320.0" promptText="Username">
          <font>
             <Font size="16.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="passwordField" layoutX="530.0" layoutY="354.0" prefHeight="7.0" prefWidth="221.0" promptText="Password">
+      <PasswordField fx:id="passwordField" layoutX="768.0" layoutY="309.0" prefHeight="50.0" prefWidth="320.0" promptText="Password">
          <font>
             <Font size="16.0" />
          </font>
       </PasswordField>
-      <Button fx:id="loginButton" alignment="CENTER" layoutX="530.0" layoutY="408.0" mnemonicParsing="false" onAction="#handleLoginButtonOnAction" prefHeight="34.0" prefWidth="221.0" text="LOGIN" textFill="WHITE">
+      <Button fx:id="loginButton" alignment="CENTER" contentDisplay="CENTER" layoutX="768.0" layoutY="380.0" mnemonicParsing="false" onAction="#handleLoginButtonOnAction" prefHeight="50.0" prefWidth="320.0" text="LOGIN" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="26.0" />
+         </font>
+      </Button>
+      <Label fx:id="packmanLabel" alignment="CENTER" layoutX="746.0" layoutY="105.0" prefHeight="94.0" prefWidth="364.0" text="PackMan" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="51.0" />
+         </font>
+      </Label>
+      <Separator layoutX="768.0" layoutY="472.0" prefHeight="0.0" prefWidth="320.0" />
+      <Button fx:id="devInfoButton" layoutX="10.0" layoutY="660.0" mnemonicParsing="false" onAction="#handleDevInfoButtonOnAction" prefHeight="50.0" prefWidth="143.0" text="DEVELOPER" textFill="WHITE">
          <font>
             <Font name="Arial Rounded MT Bold" size="18.0" />
          </font>
       </Button>
-      <Separator layoutX="530.0" layoutY="462.0" prefHeight="0.0" prefWidth="221.0" />
-      <Button fx:id="registerButton" layoutX="530.0" layoutY="481.0" mnemonicParsing="false" onAction="#handleRegisterButtonOnAction" prefHeight="34.0" prefWidth="221.0" text="REGISTER" textFill="WHITE">
+      <Button fx:id="themeButton" layoutX="1170.0" layoutY="660.0" mnemonicParsing="false" onAction="#handleThemeButtonOnAction" prefHeight="50.0" prefWidth="100.0" text="THEME">
          <font>
-            <Font name="Arial Rounded MT Bold" size="18.0" />
+            <Font name="Arial Rounded MT Bold" size="17.0" />
          </font>
       </Button>
-      <Button fx:id="helpButton" layoutX="1193.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleHelpButtonOnAction" text="HELP" textFill="WHITE">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="devInfoButton" layoutX="1174.0" layoutY="672.0" mnemonicParsing="false" onAction="#handleDevInfoButtonOnAction" text="DevInfo" textFill="WHITE">
-         <font>
-            <Font name="Arial Rounded MT Bold" size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="themeButton" layoutX="29.0" layoutY="654.0" mnemonicParsing="false" onAction="#handleThemeButtonOnAction" prefHeight="37.0" prefWidth="54.0" text="THEME" />
+      <Label fx:id="errorAlert" alignment="CENTER" layoutX="578.0" layoutY="433.0" prefHeight="42.0" prefWidth="700.0" textFill="RED" />
    </children>
 </AnchorPane>
