--- a/src/main/resources/stages/mainMenu/resident_register_stage.fxml
+++ b/src/main/resources/stages/mainMenu/resident_register_stage.fxml
@@ -31,7 +31,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="roomNumberField" layoutX="160.0" layoutY="321.0" prefHeight="50.0" prefWidth="300.0" promptText="Room Number">
+      <TextField fx:id="roomIDField" layoutX="160.0" layoutY="321.0" prefHeight="50.0" prefWidth="300.0" promptText="Room ID">
          <font>
             <Font size="18.0" />
          </font>
@@ -52,7 +52,7 @@
          </font>
       </Button>
       <Separator layoutX="475.0" layoutY="169.0" prefHeight="0.0" prefWidth="460.0" />
-      <Button fx:id="homeButton" layoutX="1186.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleHomeButtonOnAction" prefHeight="53.0" prefWidth="80.0" text="Home" />
+      <Button fx:id="homeButton" layoutX="1160.0" layoutY="640.0" mnemonicParsing="false" onAction="#handleHomeButtonOnAction" prefHeight="53.0" prefWidth="80.0" text="Home" />
       <Button fx:id="chooserButton" layoutX="778.0" layoutY="410.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="103.0" text="UPLOAD" />
       <TextField fx:id="fileField" editable="false" layoutX="616.0" layoutY="410.0" prefHeight="50.0" prefWidth="149.0" promptText="File" />
       <Label fx:id="errorLabel" alignment="CENTER" layoutX="213.0" layoutY="623.0" prefHeight="43.0" prefWidth="610.0">
@@ -60,7 +60,7 @@
             <Font size="29.0" />
          </font>
       </Label>
-      <Circle fx:id="profileView" fill="DODGERBLUE" layoutX="742.0" layoutY="283.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="profileView" fill="#ffffff00" layoutX="742.0" layoutY="283.0" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
       <Label layoutX="160.0" layoutY="105.0" text="FIRSTNAME" />
       <Label layoutX="160.0" layoutY="170.0" text="LASTNAME" />
    </children>
