--- a/src/main/resources/stages/residentMenu/resident_mailbox_stage.fxml
+++ b/src/main/resources/stages/residentMenu/resident_mailbox_stage.fxml
@@ -2,14 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="packman.controllers.ResidentMailboxController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="packman.controllers.residentMenu.ResidentMailboxController">
    <children>
-      <ImageView fx:id="imageView" fitHeight="170.0" fitWidth="200.0" layoutX="715.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="testLabel" layoutX="394.0" layoutY="164.0" prefHeight="193.0" prefWidth="200.0" />
-      <Button layoutX="282.0" layoutY="450.0" mnemonicParsing="false" text="BROWSE" />
+      <ImageView fx:id="imageView" fitHeight="170.0" fitWidth="200.0" layoutX="1047.0" layoutY="216.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="testLabel" layoutX="726.0" layoutY="154.0" prefHeight="193.0" prefWidth="200.0" />
+      <Button layoutX="596.0" layoutY="587.0" mnemonicParsing="false" text="BROWSE" />
+      <TableView fx:id="mailsTable" layoutX="74.0" layoutY="111.0" prefHeight="430.0" prefWidth="641.0">
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy></TableView>
    </children>
 </AnchorPane>
